# 2022-computer-adventures-pringlelang

./: .gitignore  CMakeLists.txt  README.md  example.txt  grammar.txt  input.txt  main.cpp
.github/workflows/: msvc.yml
inc/: interpreter.hpp  lexer.hpp  parser.hpp  source_code.hpp  sourcecode.hpp  token.hpp  type.hpp
src/: CMakeLists.txt  SourceCode.hpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  source_code.cpp  sourcecode.cpp  token.cpp  type.cpp
test/: CMakeLists.txt  test_1.cpp  tests.cpp
